# minecraft_server_manager

./: .gitignore  Dockerfile  README.md  app_initializer.py  bad_words.txt  config_example.env  main.py  main_comm.py  pyproject.toml  requirements.txt  server_manager.py  settings.py
docker/: download_server.sh  entrypoint.sh
down_detecror/: detector.py  plot_drawer.py
file_transfer/: cleaner.py  receiver.py
initializer/: app_initializer.py  logo_printer.py  start_logos.py
src/: server_manager.py  settings.py
src/anti_bot/: anti_bot.py  cycler.py  detector.py  kicker.py  logins_manager.py  models.py  storage.py  teleporter.py
src/down_detecror/: detector.py  plot_drawer.py
src/file_transfer/: backuper.py  cleaner.py  receiver.py  sender.py
src/initializer/: app_initializer.py
src/notifications/: models.py  notificator.py
src/server_communicator/: communicator.py  logs_extractor.py
src/toxicity_manager/: manager.py
src/trayer/: trayer.py
src/utils/: instance_checker.py
tests/: test_plot_drawer.py  test_server_manager.py
tests/test_down_detector/: conftest.py  test_down_detector.py
tests/test_file_transfer/: test_backuper.py
tests/test_notifications/: test_notificator.py
tests/test_notifications/fixtures/: new_users.json  notifications_data.json  user_data.json
trayer/: trayer.py
utils/: other.py
